make static.